--- a/dev/layout_template.html
+++ b/dev/layout_template.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>finsweet8</title>
     <!-- css -->
+    <link rel="stylesheet" href="../assets/css/display.css">
     <link rel="stylesheet" href="../assets/css/display_kim.css">
     <link rel="stylesheet" href="../assets/css/display_soo.css">
 </head>
