--- a/pages/Home.html
+++ b/pages/Home.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>finsweet8</title>
     <!-- css -->
+    <link rel="stylesheet" href="../assets/css/display.css">
     <link rel="stylesheet" href="../assets/css/display_kim.css">
     <link rel="stylesheet" href="../assets/css/display_soo.css">
 </head>
@@ -17,112 +18,67 @@
     <!-- container -->
     <div class="container">
 
-<!-- header -->
-<header class="con_pd">
-    <h1>
-      <a href="Home.html"><img src="../../assets/images/logo/logo.svg" alt="finsweet"></a>
-    </h1>
 
-    <!-- gnb -->
-    <nav>
-      <div class="gnb">
-
-        <ul class="menu">
-          <li><a href="Podcasts.html">Podcasts</a></li>
-          <li><a href="Host.html">Host</a></li>
-          <li><a href="About.html">About</a></li>
-          <li><a href="Blog.html">Blog</a></li>
-          <li><a href="Contact.html">Contact</a></li>
-        </ul>
-
-        <ul class="sns">
-          <li><a href="#none" class="facebook_b"></a></li>
-          <li><a href="#none" class="linkedIn_b"></a></li>
-          <li><a href="#none" class="instagram_b"></a></li>
-        </ul>
-        
-      </div>
-    </nav>
-    <!-- //gnb -->
-</header>
-<!-- //header -->
 
         <!-- contents -->
         <div id="contents">
-          <input class="check" type="checkbox">
-          <div class="main_wrap">
-            <div class="main_tit">
-              <p class="heading_1">Become The Hero Of Your Own Story</p>
-              <p class="heading_5">
-                Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
-                sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
-              </p>
-              <p class="email_send">
-                <input type="email" placeholder="Enter Your Email Id">
-                <input type="submit" value="Subscribe">
-              </p>
+          <!-- dark_mode -->
+          <input class="dark_mode" type="checkbox">
+          <!-- // dark_mode -->
+          <div class="home_wrap">
+            <div class="main_top">
+              <div class="main_tit">
+                <p class="heading_1">Become The Hero Of Your Own Story</p>
+                <p class="heading_5">
+                  Lorem ipsum dolor sit amet, consetetur sadipscing elitr,
+                  sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat.
+                </p>
+                <p class="email_send">
+                  <input type="email" placeholder="Enter Your Email Id">
+                  <input type="submit" value="Subscribe">
+                </p>
+              </div>
             </div>
-          </div>
+
+            <div class="swiper mySwiper">
+              <div class="swiper-wrapper">
+                <a href="#none" class="swiper-slide"><img src="../../assets/images/logo/podcast_available_on.png" alt="podcast_available_on logo"></a>
+                <a href="#none" class="swiper-slide"><img src="../../assets/images/logo/apple_podcasts.png" alt="apple potcasts logo"></a>
+                <a href="#none" class="swiper-slide"><img src="../../assets/images/logo/sound_cloud.png" alt="sound_cloud logo"></a>
+                <a href="#none" class="swiper-slide"><img src="../../assets/images/logo/google_podcast.png" alt="google_podcast logo"></a>
+                <a href="#none" class="swiper-slide"><img src="../../assets/images/logo/spotify.png" alt="spotify logo"></a>
+              </div>
+            </div>
+
+            <div class="sec_wrap">
+              <div class="sec sec1">
+                <div class="sec_txt">
+                  <p class="heading_2">A podcast for makers and entrepreneurs</p>
+                  <p class="heading_5">
+                    Apparently we had reached a great height in the atmosphere, for the sky was a dead black,
+                    and the stars had ceased to twinkle.
+                  </p>
+                </div>
+                <p class="sec_img">A podcast for makers and entrepreneurs img</p>
+              </div>
+              <div class="sec sec2">
+                <div class="sec_txt">
+                  <p class="heading_2">My origins on <span>YouTube</span> in 2008</p>
+                  <p class="heading_5">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mus cras lacus tellus morbi viverra suspendisse ornare.
+                    Sit volutpat, volutpat ut netus malesuada enim penatibus non aliquet.
+                  </p>
+                </div>
+                <p class="sec_img">my origins on youtube in 2008 img</p>
+                <button type="button" class="heading_2 bnt_video">350+ Videos</button>
+              </div>
+            </div> <!-- //sec_wrap -->
+
+          </div><!-- //home_wrap -->
         </div>
         <!-- //contents -->
 
-<!-- footer -->
-<footer>
 
-  <!-- footer_sponsors -->
-  <div class="footer_sponsors">
-    <h3 class="heading_2">Our Spoonsors</h3>
-    <div class="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_1.png" alt="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_2.png" alt="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_3.png" alt="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_4.png" alt="logoipsum">
-      <img src="../../assets/images/logo/logoipsum_5.png" alt="logoipsum">
-    </div>
-  </div>
-  <!-- //footer_sponsors -->
-
-  <!-- footer_con -->
-  <div class="footer_con">
-
-    <div class="logo_wrap">
-      <a href="Home.html"><img src="../../assets/images/logo/logo.svg" alt="finsweet"></a>
-    </div>
-
-    <div class="footer_sub">
-
-      <div class="pages">
-        <li><a href="Podcasts.html">Podcasts</a></li>
-        <li><a href="Host.html">Host</a></li>
-        <li><a href="About.html">About</a></li>
-        <li><a href="Blog.html">Blog</a></li>
-      </div>
-
-      <div class="reach_us">
-        <ul>
-          <li><a href="#none">Contact</a></li>
-          <li><a href="#none">About</a></li>
-        </ul>
-      </div>
-
-      <div class="subscribe">
-        <ul>
-          <li class="logo_apple"><a href="#none"><img src="../../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a></li>
-          <li class="logo_sound_cloud"><a href="#none"><img src="../../assets/images/logo/sound_cloud.png" alt="sound cloud"></a></li>
-          <li class="google_logo"><a href="#none"><img src="../../assets/images/logo/google_podcast.png" alt="googl _podcast"></a></li>
-          <li class="spotify_logo"><a href="#none"><img src="../../assets/images/logo/spotify.png" alt="spotify"></a></li>
-        </ul>
-      </div>
-
-    </div>
-  </div>
-
-  <div class="copyright">
-    <em>© Copyright Finsweet 2021</em>
-  </div>
-
-</footer>
-<!-- //footer -->
 
     </div>
     <!-- //container -->
