--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
 
     <ul>
       <li><a href="./pages/promotion.html" target="_blank" title="새창열림">Promotion</a></li>
-      <li><a href="./pages/Home.html" target="_blank" title="새창열림">Home</a></li>
-      <li><a href="./pages/Host.html" target="_blank" title="새창열림">Host</a></li>
-      <li><a href="./pages/Podcasts.html" target="_blank" title="새창열림">Podcasts</a></li>
-      <li><a href="./pages/Single_Podcast.html" target="_blank" title="새창열림">Single Podcast</a></li>
-      <li><a href="./pages/About.html" target="_blank" title="새창열림">About</a></li>
-      <li><a href="./pages/Blog.html" target="_blank" title="새창열림">Blog</a></li>
-      <li><a href="./pages/Single_Blog.html" target="_blank" title="새창열림">Single Blog</a></li>
-      <li><a href="./pages/Contact.html" target="_blank" title="새창열림">Contact</a></li>
+      <li><a href="./pages/home.html" target="_blank" title="새창열림">Home</a></li>
+      <li><a href="./pages/host.html" target="_blank" title="새창열림">Host</a></li>
+      <li><a href="./pages/podcasts.html" target="_blank" title="새창열림">Podcasts</a></li>
+      <li><a href="./pages/single_podcast.html" target="_blank" title="새창열림">Single Podcast</a></li>
+      <li><a href="./pages/about.html" target="_blank" title="새창열림">About</a></li>
+      <li><a href="./pages/blog.html" target="_blank" title="새창열림">Blog</a></li>
+      <li><a href="./pages/single_blog.html" target="_blank" title="새창열림">Single Blog</a></li>
+      <li><a href="./pages/contact.html" target="_blank" title="새창열림">Contact</a></li>
     </ul>
 
 </body>
