--- a/index.html
+++ b/index.html
@@ -6,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>finsweet8</title>
     <!-- css -->
-    <link rel="stylesheet" href="../assets/css/display.css">
-    <!-- js -->
-    <script src="../assets/js/main.js"></script>
+    <link rel="stylesheet" href="./assets/css/display.css">
+    <link rel="stylesheet" href="./assets/css/display_kim.css">
+    <link rel="stylesheet" href="./assets/css/display_soo.css">
+
 </head>
 
 <body>
@@ -27,6 +28,9 @@
       <li><a href="./pages/contact.html" target="_blank" title="새창열림">Contact</a></li>
     </ul>
 
+    <!-- js -->
+    <script src="./assets/plugin/swiper/swiper-bundle.min.js"></script>
+    <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
