--- a/dev/page_include/footer.html
+++ b/dev/page_include/footer.html
@@ -16,37 +16,39 @@
 
   <!-- footer_con -->
   <div class="footer_con">
-
+    
     <div class="logo_wrap">
-      <a href="Home.html"><img src="../../assets/images/logo/logo.svg" alt="finsweet"></a>
+      <a href="Home.html"><img src="../../assets/images/logo/logo_w.svg" alt="finsweet"></a>
     </div>
 
-    <div class="footer_sub">
-
-      <div class="pages">
-        <li><a href="Podcasts.html">Podcasts</a></li>
-        <li><a href="Host.html">Host</a></li>
-        <li><a href="About.html">About</a></li>
-        <li><a href="Blog.html">Blog</a></li>
-      </div>
-
-      <div class="reach_us">
-        <ul>
-          <li><a href="#none">Contact</a></li>
-          <li><a href="#none">About</a></li>
-        </ul>
-      </div>
-
-      <div class="subscribe">
-        <ul>
-          <li class="logo_apple"><a href="#none"><img src="../../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a></li>
-          <li class="logo_sound_cloud"><a href="#none"><img src="../../assets/images/logo/sound_cloud.png" alt="sound cloud"></a></li>
-          <li class="google_logo"><a href="#none"><img src="../../assets/images/logo/google_podcast.png" alt="googl _podcast"></a></li>
-          <li class="spotify_logo"><a href="#none"><img src="../../assets/images/logo/spotify.png" alt="spotify"></a></li>
-        </ul>
-      </div>
-
+    <div class="pages">
+      <h4>Pages</h4>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
+        <li><a href="host.html">Host</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
     </div>
+
+    <div class="reach_us">
+      <h4>Reach Us</h4>
+      <ul>
+        <li><a href="#none">Contact</a></li>
+        <li><a href="#none">About</a></li>
+      </ul>
+    </div>
+
+    <div class="subscribe">
+      <h4>Subscribe</h4>
+      <ul>
+        <li class="logo_apple"><a href="#none"><img src="../../assets/images/logo/apple_podcasts_w.png" alt="apple potcasts"></a></li>
+        <li class="logo_sound_cloud"><a href="#none"><img src="../../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
+        <li class="google_logo"><a href="#none"><img src="../../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
+        <li class="spotify_logo"><a href="#none"><img src="../../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
+      </ul>
+    </div>
+
   </div>
 
   <div class="copyright">
