--- a/dev/page_include/header.html
+++ b/dev/page_include/header.html
@@ -7,6 +7,14 @@
     <!-- gnb -->
     <nav>
       <div class="gnb">
+        
+        <!-- mo-hamburger -->
+        <input type="checkbox" name="" id="">
+        <div class="hamburger-lines">
+            <span class="line line1"></span>
+            <span class="line line2"></span>
+            <span class="line line3"></span>
+        </div>
 
         <ul class="menu">
           <li><a href="Podcasts.html">Podcasts</a></li>
