--- a/pages/Podcasts.html
+++ b/pages/Podcasts.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>finsweet8</title>
     <!-- css -->
+    <link rel="stylesheet" href="../assets/plugin/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="../assets/css/display.css">
     <link rel="stylesheet" href="../assets/css/display_kim.css">
     <link rel="stylesheet" href="../assets/css/display_soo.css">
@@ -32,6 +33,7 @@
 
 
     <!-- js -->
+    <script src="../assets/plugin/swiper/swiper-bundle.min.js"></script>
     <script src="../assets/js/main.js"></script>
 </body>
 </html>
