--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>finsweet8</title>
     <!-- css -->
+    <link rel="stylesheet" href="../assets/plugin/swiper/swiper-bundle.min.css">
     <link rel="stylesheet" href="../assets/css/display.css">
     <link rel="stylesheet" href="../assets/css/display_kim.css">
     <link rel="stylesheet" href="../assets/css/display_soo.css">
@@ -31,6 +32,14 @@
     <!-- gnb -->
     <nav>
       <div class="gnb">
+        
+        <!-- mo-hamburger -->
+        <input type="checkbox" name="" id="">
+        <div class="hamburger-lines">
+            <span class="line line1"></span>
+            <span class="line line2"></span>
+            <span class="line line3"></span>
+        </div>
 
         <ul class="menu">
           <li><a href="Podcasts.html">Podcasts</a></li>
@@ -51,128 +60,129 @@
     <!-- //gnb -->
 </header>
 <!-- //header -->
-            <div class="promotion">
-                <!-- promo_tit -->
-                <div class="promo_tit con_pd">
-                    <h1>Style Guide</h1>
-                    <img src="../../assets/images/logo/logo.svg" alt="finsweet8 logo">
-                </div>
-                <!-- //promo_tit -->
+          <div class="promotion">
+              <!-- promo_tit -->
+              <div class="promo_tit con_pd">
+                  <h1>Style Guide</h1>
+                  <img src="../../assets/images/logo/logo.svg" alt="finsweet8 logo">
+              </div>
+              <!-- //promo_tit -->
 
-                <!-- promo_con -->
-                <div class="promo_con con_pd">
+              <!-- promo_con -->
+              <div class="promo_con con_pd">
 
-                    <!-- typography -->
-                    <div class="typography_design">
-                        <h3>Typography Design</h3>
-                        <div class="typo_box">
-                            <div class="download">
-                                <a href="#none"><span class="ico"></span><p>Download the Font family 👉</p></a>
-                            </div>
-                            <div class="font">
-                                <span class="ico"></span><p>Inter Font</p>
-                            </div>
-                        </div>
-                    </div>
-                    <!-- //typography -->
+                  <!-- typography -->
+                  <div class="typography_design">
+                      <h3>Typography Design</h3>
+                      <div class="typo_box">
+                          <div class="download">
+                              <a href="#none"><span class="ico"></span><p>Download the Font family 👉</p></a>
+                          </div>
+                          <div class="font">
+                              <span class="ico"></span><p>Inter Font</p>
+                          </div>
+                      </div>
+                  </div>
+                  <!-- //typography -->
 
-                    <!-- text_heading -->
-                    <div class="text_heading">
-                      <div class="tehead_wrap">
-                        <div class="heading">
-                          <p class="heading_1">Heading 1</p>
-                          <p class="heading_2">Heading 2</p>
-                          <p class="heading_3">Heading 3</p>
-                          <p class="heading_4">Heading 4</p>
-                          <p class="heading_5">Heading 5</p>
-                          <p class="heading_6">Heading 6</p>
-                        </div>
-                        <div class="body_text">
-                          <p>Body Text</br></br>
-                            Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black, and the</br>stars had ceased to twinkle.
-                          </p>
-                        </div>
+                  <!-- text_heading -->
+                  <div class="text_heading">
+                    <div class="tehead_wrap">
+                      <div class="heading">
+                        <p class="heading_1">Heading 1</p>
+                        <p class="heading_2">Heading 2</p>
+                        <p class="heading_3">Heading 3</p>
+                        <p class="heading_4">Heading 4</p>
+                        <p class="heading_5">Heading 5</p>
+                        <p class="heading_6">Heading 6</p>
+                      </div>
+                      <div class="body_text">
+                        <p>Body Text</br></br>
+                          Apparently we had reached a great height in the</br>atmosphere, for the sky was a dead black, and the</br>stars had ceased to twinkle.
+                        </p>
                       </div>
                     </div>
-                    <!-- //text_heading -->
+                  </div>
+                  <!-- //text_heading -->
 
-                    <!-- color_palette -->
-                    <div class="color_palette">
-                      <h3>Color Palette</h3>
-                      <ul>
-                        <li class="sub_color">$sub_color</li>
-                        <li class="color_1">$color_1</li>
-                        <li class="prime_color">$prime_color</li>
-                        <li class="color_2">$color_2</li>
-                        <li class="color_3">$color_3</li>
-                        <li class="color_4">$color_4</li>
-                        <li class="color_5">$color_5</li>
+                  <!-- color_palette -->
+                  <div class="color_palette">
+                    <h3>Color Palette</h3>
+                    <ul>
+                      <li class="sub_color">$sub_color</li>
+                      <li class="color_1">$color_1</li>
+                      <li class="prime_color">$prime_color</li>
+                      <li class="color_2">$color_2</li>
+                      <li class="color_3">$color_3</li>
+                      <li class="color_4">$color_4</li>
+                      <li class="color_5">$color_5</li>
+                    </ul>
+                  </div>
+                  <!-- //color_palette -->
+
+                  <!-- components -->
+                  <div class="components">
+                    <h3>Components</h3>
+                    <div>
+
+                      <!-- btn -->
+                      <ul class="btn_com_list">
+                        <li class="btn_1"><a href="#none">Button</a></li>
+                        <li class="btn_2"><a href="#none">Secondary</a></li>
+                        <li class="btn_listen"><a href="#none"><i class="play"></i>Listen Now</a></li>
+                        <li class="btn_read"><a href="#none">Read Now</a></li>
+                      </ul>
+
+                      <ul class="btn_hover_list">
+                        <li class="btn_1"><a href="#none">Hover</a></li>
+                        <li class="btn_2"><a href="#none">Hover</a></li>
+                        <li class="btn_listen"><a href="#none"><i class="play"></i>Hover</a></li>
+                        <li class="btn_read"><a href="#none">Hover</a></li>
+                      </ul>
+                      <!-- //btn -->
+
+                      <!-- category potcasts -->
+                      <ul class="category_potcasts">
+                        <li class="cate_pot_on"><a href="#none">All Podcasts</a></li>
+                        <li class="cate_pot"><a href="#none">Startup</a></li>
+                        <li class="cate_pot"><a href="#none">Marketing</a></li>
+                        <li class="cate_pot"><a href="#none">Business</a></li>
+                      </ul>
+                      <!-- //category potcasts -->
+
+                    </div>
+
+                    <div class="potcasts">
+
+                      <!-- potcasts -->
+                      <ul class="potcasts_list">
+                        <li class="logo_apple"><a href="#none"><img src="../../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a></li>
+                        <li class="logo_sound_cloud"><a href="#none"><img src="../../assets/images/logo/sound_cloud.png" alt="sound cloud"></a></li>
+                        <li class="google_logo"><a href="#none"><img src="../../assets/images/logo/google_podcast.png" alt="googl _podcast"></a></li>
+                        <li class="spotify_logo"><a href="#none"><img src="../../assets/images/logo/spotify.png" alt="spotify"></a></li>
+                      </ul>
+                      <!-- //potcasts -->
+
+                      <ul class="sns_list">
+                        <div class="ico_big">
+                          <li class="facebook_b"><a href="#none"></a></li>
+                          <li class="linkedIn_b"><a href="#none"></a></li>
+                          <li class="instagram_b"><a href="#none"></a></li>
+                        </div>
+                        <div class="ico_small">
+                          <li class="facebook_s"><a href="#none"></a></li>
+                          <li class="linkedIn_s"><a href="#none"></a></li>
+                          <li class="instagram_s"><a href="#none"></a></li>
+                        </div>
                       </ul>
                     </div>
-                    <!-- //color_palette -->
+                  <!-- //components -->
 
-                    <!-- components -->
-                    <div class="components">
-                      <h3>Components</h3>
-                      <div>
+              </div>
+          </div>
+          <!-- //promo_con -->
 
-                        <!-- btn -->
-                        <ul class="btn_com_list">
-                          <li class="btn_1"><a href="#none">Button</a></li>
-                          <li class="btn_2"><a href="#none">Secondary</a></li>
-                          <li class="btn_listen"><a href="#none"><i class="play"></i>Listen Now</a></li>
-                          <li class="btn_read"><a href="#none">Read Now</a></li>
-                        </ul>
-
-                        <ul class="btn_hover_list">
-                          <li class="btn_1"><a href="#none">Hover</a></li>
-                          <li class="btn_2"><a href="#none">Hover</a></li>
-                          <li class="btn_listen"><a href="#none"><i class="play"></i>Hover</a></li>
-                          <li class="btn_read"><a href="#none">Hover</a></li>
-                        </ul>
-                        <!-- //btn -->
-
-                        <!-- category potcasts -->
-                        <ul class="category_potcasts">
-                          <li class="cate_pot_on"><a href="#none">All Podcasts</a></li>
-                          <li class="cate_pot"><a href="#none">Startup</a></li>
-                          <li class="cate_pot"><a href="#none">Marketing</a></li>
-                          <li class="cate_pot"><a href="#none">Business</a></li>
-                        </ul>
-                        <!-- //category potcasts -->
-
-                      </div>
-
-                      <div class="potcasts">
-
-                        <!-- potcasts -->
-                        <ul class="potcasts_list">
-                          <li class="logo_apple"><a href="#none"><img src="../../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a></li>
-                          <li class="logo_sound_cloud"><a href="#none"><img src="../../assets/images/logo/sound_cloud.png" alt="sound cloud"></a></li>
-                          <li class="google_logo"><a href="#none"><img src="../../assets/images/logo/google_podcast.png" alt="googl _podcast"></a></li>
-                          <li class="spotify_logo"><a href="#none"><img src="../../assets/images/logo/spotify.png" alt="spotify"></a></li>
-                        </ul>
-                        <!-- //potcasts -->
-
-                        <ul class="sns_list">
-                          <div class="ico_big">
-                            <li class="facebook_b"><a href="#none"></a></li>
-                            <li class="linkedIn_b"><a href="#none"></a></li>
-                            <li class="instagram_b"><a href="#none"></a></li>
-                          </div>
-                          <div class="ico_small">
-                            <li class="facebook_s"><a href="#none"></a></li>
-                            <li class="linkedIn_s"><a href="#none"></a></li>
-                            <li class="instagram_s"><a href="#none"></a></li>
-                          </div>
-                        </ul>
-                      </div>
-                    <!-- //components -->
-
-                </div>
-            </div>
-            <!-- //promo_con -->
-
+          </div>
 <!-- footer -->
 <footer>
 
@@ -191,37 +201,39 @@
 
   <!-- footer_con -->
   <div class="footer_con">
-
+    
     <div class="logo_wrap">
-      <a href="Home.html"><img src="../../assets/images/logo/logo.svg" alt="finsweet"></a>
+      <a href="Home.html"><img src="../../assets/images/logo/logo_w.svg" alt="finsweet"></a>
     </div>
 
-    <div class="footer_sub">
-
-      <div class="pages">
-        <li><a href="Podcasts.html">Podcasts</a></li>
-        <li><a href="Host.html">Host</a></li>
-        <li><a href="About.html">About</a></li>
-        <li><a href="Blog.html">Blog</a></li>
-      </div>
-
-      <div class="reach_us">
-        <ul>
-          <li><a href="#none">Contact</a></li>
-          <li><a href="#none">About</a></li>
-        </ul>
-      </div>
-
-      <div class="subscribe">
-        <ul>
-          <li class="logo_apple"><a href="#none"><img src="../../assets/images/logo/apple_podcasts.png" alt="apple potcasts"></a></li>
-          <li class="logo_sound_cloud"><a href="#none"><img src="../../assets/images/logo/sound_cloud.png" alt="sound cloud"></a></li>
-          <li class="google_logo"><a href="#none"><img src="../../assets/images/logo/google_podcast.png" alt="googl _podcast"></a></li>
-          <li class="spotify_logo"><a href="#none"><img src="../../assets/images/logo/spotify.png" alt="spotify"></a></li>
-        </ul>
-      </div>
-
+    <div class="pages">
+      <h4>Pages</h4>
+      <ul>
+        <li><a href="home.html">Home</a></li>
+        <li><a href="podcasts.html">Podcasts</a></li>
+        <li><a href="host.html">Host</a></li>
+        <li><a href="blog.html">Blog</a></li>
+      </ul>
     </div>
+
+    <div class="reach_us">
+      <h4>Reach Us</h4>
+      <ul>
+        <li><a href="#none">Contact</a></li>
+        <li><a href="#none">About</a></li>
+      </ul>
+    </div>
+
+    <div class="subscribe">
+      <h4>Subscribe</h4>
+      <ul>
+        <li class="logo_apple"><a href="#none"><img src="../../assets/images/logo/apple_podcasts_w.png" alt="apple potcasts"></a></li>
+        <li class="logo_sound_cloud"><a href="#none"><img src="../../assets/images/logo/sound_cloud_w.png" alt="sound cloud"></a></li>
+        <li class="google_logo"><a href="#none"><img src="../../assets/images/logo/google_podcast_w.png" alt="googl _podcast"></a></li>
+        <li class="spotify_logo"><a href="#none"><img src="../../assets/images/logo/spotify_w.png" alt="spotify"></a></li>
+      </ul>
+    </div>
+
   </div>
 
   <div class="copyright">
@@ -230,7 +242,6 @@
 
 </footer>
 <!-- //footer -->
-        </div>
         <!-- //contents -->
 
     </div>
@@ -242,6 +253,7 @@
 
 
     <!-- js -->
+    <script src="../assets/plugin/swiper/swiper-bundle.min.js"></script>
     <script src="../assets/js/main.js"></script>
 </body>
 </html>
