--- a/pages/promotion.html
+++ b/pages/promotion.html
@@ -203,6 +203,7 @@
         <!-- //promo_con -->
 
         </div>
+        </br></br></br></br></br></br>
 <!-- recent_episodes -->
 <div class="recent_episodes con_pd">
   <!-- recent_text -->
@@ -213,24 +214,37 @@
   </div>
   <!-- //recent_text -->
 
+  <!-- recent_video -->
   <div class="recent_video">
     <ul>
       <li>
-        <iframe width="100%" height="100%" src="https://www.youtube.com/embed/bjr8nWZP2ag?rel=0&autoplay=1&mute=1&playlist=bjr8nWZP2ag&loop=1" frameborder="0" allowfullscreen></iframe>
+        <iframe src="https://www.youtube.com/embed/bsmoFqvY5gw?rel=0&autoplay=0&mute=1&playlist=bsmoFqvY5gw&loop=1" frameborder="0" allowfullscreen></iframe>
         <div class="recent_video_text">
-          <h3>Ep 1: How to build a world-class business brand</h3>
+          <h3 class="heading_3">Ep 1: How to build a world-class business brand</h3>
           <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
-          <a href="#none" class="btn_listen">Listen Now</a>
+          <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+          <a href="#none" class="mute"><i class="ico_mute"></i>숄라숄라</a>
         </div>
       </li>
       <li>
-
+        <iframe src="https://www.youtube.com/embed/aGjhO75XCCw?rel=0&autoplay=0&mute=1&playlist=aGjhO75XCCw&loop=1" frameborder="0" allowfullscreen></iframe>
+        <div class="recent_video_text">
+          <h3 class="heading_3">Ep 2: Getting the first 100 customers for your business</h3>
+          <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+        </div>
       </li>
       <li>
-
+        <iframe src="https://www.youtube.com/embed/dGNJcwUXDFQ?rel=0&autoplay=0&mute=1&playlist=dGNJcwUXDFQ&loop=1" frameborder="0" allowfullscreen></iframe>
+        <div class="recent_video_text">
+          <h3 class="heading_3">Ep 3: Should I raise money for my startup, or not?</h3>
+          <p>Lorem ipsum at vero eos et accusam et justo duo dolores et ea rebum.</p>
+          <a href="#none" class="btn_listen"><i class="play"></i>Listen Now</a>
+        </div>
       </li>
     </ul>
   </div>
+  <!-- //recent_video -->
 </div>
 <!-- //recent_episodes -->
 
