--- a/dev/page_dev/promotion.html
+++ b/dev/page_dev/promotion.html
@@ -4,15 +4,13 @@
 
 <!-- wrapper -->
 <div id="wrapper">
+  <!-- @@include ../page_include/header.html -->
 
   <!-- container -->
   <div class="container">
-
-
       <!-- contents -->
       <div id="contents">
 
-        <!-- @@include ../page_include/header.html -->
         <div class="promotion">
             <!-- promo_tit -->
             <div class="promo_tit con_pd">
@@ -138,12 +136,14 @@
         </br></br></br></br></br></br>
         <!-- @@include ../page_include/recent_episodes.html -->
         <!-- @@include ../page_include/footer_spoonsors.html -->
-        <!-- @@include ../page_include/footer.html -->
-      <!-- //contents -->
+        <!-- //contents -->
+
+      </div>
+      <!-- //container -->
 
   </div>
-  <!-- //container -->
 
+  <!-- @@include ../page_include/footer.html -->
 </div>
 <!-- //wrapper -->
 
